--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sp-dbus-test-pingpong (0.2) unstable; urgency=low
+
+  * The optional roundtrip latency mode has been implemented (can be
+    invoked by giving -r to dping). Fixes: NB#91978
+
+ -- Eero Tamminen <eero.tamminen@nokia.com>  Wed, 12 Nov 2008 12:49:08 +0200
+
 sp-dbus-test-pingpong (0.1) unstable; urgency=low
 
   * Initial Release.
